Algorithm and Expire is in .env

--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ DB_NAME=imageeditor
 DB_PASSWORD=postgres
 DB_USER=postgres
 SECRET=fdgmsldgnhlksdfgmkldbm
+ALGORITHM = HS256
+ACCESS_TOKEN_EXPIRE_MINUTES = 30
