--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ python-dotenv~=1.0.0
 asyncio~=3.4.3
 alembic~=1.13.1
 email-validator>=1.0.3
-pyjwt==2.6.0
+pyjwt~=2.8.0
 bcrypt==4.0.1
 pydantic~=2.5.3
 asyncpg~=0.29.0
