--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 /Redis-x64-5.0.14.1/
 # C extensions
 *.so
-
+images/
 # Distribution / packaging
 .Python
 build/
@@ -28,7 +28,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
-
+images/
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
