--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 alembic==1.13.1
 asyncpg==0.29.0
 cassandra_driver==3.29.1
-fastapi==0.110.1
+fastapi[all]
 httpx==0.27.0
 passlib==1.7.4
 Pillow==10.3.0
