--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,16 +4,20 @@ services:
   cassandra_instagram:
     image: cassandra:latest
     container_name: cassandra_instagram
-    environment:
-       - CASSANDRA_USER=cassandra
-       - CASSANDRA_PASSWORD=cassandra
     ports:
-      - "9042:9042"
+      - 9042:9042
+    environment:
+     - CASSANDRA_CLUSTER_NAME=cloudinfra
     volumes:
       - ./cassandra_init.sh:/cassandra_init.sh
-    command: ["chmod +x /init_cassandra.sh"]
-    entrypoint: ["/bin/bash", "-c", "/cassandra_init.sh"]
-  
+      - /var/lib/cassandra
+    entrypoint: ["/cassandra_init.sh"]
+    healthcheck:
+      test: ["CMD-SHELL", "[ $$(nodetool statusgossip) = running ]"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
+
   postgres_instagram:
     image: postgres:15
     container_name: postgres_instagram
