--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,9 +26,8 @@ services:
     expose: 
       - 5432
     env_file:
-      - .env
+      - .env-non-dev
     volumes:
-      - ./wait_for_cassandra.sh:/wait_for_cassandra.sh
       - ./start.sh:/start.sh
 
 
@@ -42,6 +41,6 @@ services:
     depends_on:
       - cassandra_instagram
       - postgres_instagram
-    env_file:
-      - .env
+    env_file: 
+      - .env-non-dev
     command: ["/fastapi_app/wait_for_cassandra.sh", "-t", "30", "cassandra_instagram:9042", "--", "/fastapi_app/start.sh"]
