--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.13.1
 asyncpg==0.29.0
+bcrypt
 cassandra_driver==3.29.1
 fastapi[all]
 httpx==0.27.0
@@ -10,6 +11,5 @@ PyJWT==2.8.0
 PyJWT==2.8.0
 pytest==8.1.1
 python-dotenv==1.0.1
-python_bcrypt==0.3.2
 SQLAlchemy==2.0.29
 starlette==0.37.2
