--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,8 @@ passlib==1.7.4
 Pillow==10.3.0
 pydantic==2.7.0
 PyJWT==2.8.0
-PyJWT==2.8.0
 pytest==8.1.1
 python-dotenv==1.0.1
 SQLAlchemy==2.0.29
 starlette==0.37.2
+PyYAML
