--- a/docker_cassandra/Dockerfile
+++ b/docker_cassandra/Dockerfile
@@ -1,5 +1,5 @@
 # NOTE: will also work with other cassandra version tags
-FROM cassandra:4
+FROM cassandra:3.11
 
 # Fix UTF-8 accents in init scripts
 ENV LANG C.UTF-8
@@ -12,7 +12,9 @@ COPY *.cql /docker-entrypoint-initdb.d/
 
 # this is the script that will patch the already existing entrypoint from cassandra image
 COPY entrypoint.sh /
-RUN chmod +x /*.sh
+RUN ["chmod", "+x", "/entrypoint.sh"]
+
+
 # Override ENTRYPOINT, keep CMD
 ENTRYPOINT ["/entrypoint.sh"]
 CMD ["cassandra", "-f"]
