--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ asyncio==3.4.3
 asyncpg==0.29.0
 attrs==23.2.0
 backcall==0.2.0
-bcrypt==4.1.2
+bcrypt
 beautifulsoup4==4.12.3
 bleach==6.1.0
 cassandra-driver==3.29.1
